# C-_car-record-managment

./: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  DerivedEntity.cpp  DerivedEntity.h  Entity.cpp  Entity.h  FileManager.h  README.md  SyncManager.cpp  SyncManager.h  UserInterface.cpp  UserInterface.h  db_schema.sql  main.cpp
